# sensor_simulator

./: .gitignore  Cargo.toml  README.md  notes.md
src/: args.rs  main.rs  sensor.rs  utils.rs
