cargo-features = ["edition2024"]

[package]
name = "sensor_simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
time = { version = "0.3", features = ["serde", "formatting"] }
clap = { version = "4.5.45", features = ["derive"] }
csv = "1.3.1"
rand = "0.9.2"
rand_distr = "0.5.1"
serde = { version = "1", features = ["derive"] }
